--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,3 +28,6 @@ $large-font-size: 20px;
 
 $code-font-family: Menlo, Monaco, "Courier New", monospace;
 $code-color: #bf616a;
+
+$base-color: #000000;
+$base-lighten-color: lighten($base-color, 50);
