--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
 
 {% if site.related_posts != empty %}
 <aside class="related">
-  <h3>Related posts</h3>
+  <h3>Dans le même ordre d'idée</h3>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
