--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
+<!--  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>-->
+    
+    <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{% include translated_date.html date=page.date format="%-d %B %Y" lang="fr" %}</time>
     
     <div class="post-tag">
     <ul>
