--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,3 +33,5 @@ $code-color: #bf616a;
 
 //$base-color: #000000;
 //$base-lighten-color: lighten($base-color, 50);
+
+$blue-lighten-color: lighten($blue, 50);
