Maintenant la page des tags est belle

--- a/_sass/_gbstyle.scss
+++ b/_sass/_gbstyle.scss
@@ -86,3 +86,14 @@
 //    text-decoration: underline;
     cursor: auto;
 }
+
+//Page des tags
+
+.tag-post {
+    list-style-type: none;
+}
+
+.tag-title {
+    margin-bottom: .5rem;
+//    font-weight: 500;
+}
