--- a/_includes/post_node.liquid
+++ b/_includes/post_node.liquid
@@ -8,22 +8,31 @@ output: a post-node
 {% else %}
   {%assign element="h2" %}
 {% endif %}
+
 <div class="post-node">
-  <a href="{{ post.url | prepend: site.baseurl }}"><small><time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{% include translated_date.html date=page.date format="%-d %B %Y" lang="fr" %}</time></small><{{element}} class="text-capitalize post-title">{{ include.post.title }}</{{element}}></a>
-  {% if include.meta %}
+  
+    <small><time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{% include translated_date.html date=page.date format="%-d %B %Y" lang="fr" %}</time></small><a href="{{ post.url | prepend: site.baseurl }}"><{{element}} class="text-capitalize post-title">{{ include.post.title }}</{{element}}></a>
+  
+    {% if include.meta %}
+    
     <div class="post-meta">
     {{ include.post.date | date: "%b %-d, %Y" }}, {{ include.post.category | capitalize }}
     <div class="post-lang hidden">{{ include.post.lang}}</div>
     <div class="pull-right post-tags">{{ include.post.tags | join: ', ' }}</div>
     </div>
-  {% endif %}
+  
+    {% endif %}
   {% if include.lead %}
-  <span class="lead">{{ include.post.lead }}</span>
+  
+    <span class="lead">{{ include.post.lead }}</span>
   {% endif %}
   {% if include.excerpt %}
+    
     <div class="post-excerpt">
      {{ include.post.excerpt }}
     </div>
-  {% endif %}
+  
+    {% endif %}
 </div>
+
 {% assign element = nil %}
