--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,25 +44,34 @@ layout: default
 {% endif %}
 -->
 
-<aside class="related">
-  <h3>Dans le même ordre d'idée</h3>
-{% assign n_posts = 0 %}
-{% for post in site.posts %}
-    {%if post.id == page.id %}{% continue %}{% endif %}
-    {% for this_tag in page.tags %}
-        {% if post.tags contains this_tag%}
-{% if n_posts == 0 %}{{include.head}}
-    
-    <ul class="related-posts">{% endif %}
-        
-            <li>{% include post_node.liquid post=post element="h4" %}</li>
-            
-        {% assign n_posts = n_posts | plus: 1 %}
-            {% break %}
-        {% endif %}
+<!--Code plus compliqué pour les related-->
+
+
+{% assign hasSimilar = '' %}
+{% for post in site.related_posts %}
+    {% assign postHasSimilar = false %}
+    {% for tag in post.tags %}
+        {% for thisTag in page.tags %}
+            {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+                {% if hasSimilar.size == 0 %}
+                    <h4>Dans le même ordre d'idée</h4>
+                        <ul class="related-posts">
+                        {% endif %}
+                            <li>
+                                <div class="module-post">
+                                    <small><time datetime="{{ post.date | date_to_xmlschema }}" class="post-date">{% include translated_date.html date=post.date format="%-d %B %Y" lang="fr" %}</time></small><a href="{{ site.url }}{{ post.url }}">{{ post.title }}
+                                    {% if post.series %}
+                                    (Series: {{ post.series }})
+                                    {% endif %}
+                                    </a>
+                                </div>
+                            </li>
+                        {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+                {% assign postHasSimilar = true %}
+            {% endif %}
+        {% endfor %}
     {% endfor %}
-    {%if n_posts > 5 %}{% break %}{% endif %}
 {% endfor %}
-{% if n_posts > 0 %}
-    </ul>{% endif %}
-</aside>
+{% if hasSimilar.size > 0 %}
+    </ul>
+{% endif %}
