modifié les captions des photos. Maintenant on utilise span = caption

--- a/_sass/_gbstyle.scss
+++ b/_sass/_gbstyle.scss
@@ -97,3 +97,12 @@
     margin-bottom: .5rem;
 //    font-weight: 500;
 }
+
+//Captions
+
+.caption {
+    font-size: .5rem;
+    font-style: italic;
+    margin: -1rem 0 1rem 0;
+    width: 100%;
+}
