ajusté la hauteur automatique des images

--- a/_sass/_gbstyle.scss
+++ b/_sass/_gbstyle.scss
@@ -106,3 +106,9 @@
     margin: -1rem 0 1rem 0;
     width: 100%;
 }
+
+//Images. Les images sur le post "CL et l'Avenir de la Pop en Anglais" sont plus belles comme ça. Check si ça en birse d'autres"
+
+img {
+    height: auto;
+}
