--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -74,8 +74,11 @@ abbr {
 blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
+//  color: #7a7a7a;
+  border-left: 3px solid #e5e5e5;
+    
+  font-size: 90%;
+  font-style: italic;
 
   p:last-child {
     margin-bottom: 0;
