--- a/_sass/_gbstyle.scss
+++ b/_sass/_gbstyle.scss
@@ -112,3 +112,18 @@
 img {
     height: auto;
 }
+
+
+//Blockquotes
+
+blockquote blockquote {
+    border: none;
+    padding: 0px;
+//    margin: -20px 0 0 0;
+    margin: -1rem 0 0 0;
+}
+
+blockquote p > a {
+    font-size: .75rem;
+    border: none;
+}
