--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nouvelles et actualités à propos de l'anglais global et de l'état de la langue universelle du commerce, de la science, de l'éducation et de l'internet.">
 
   <title>
     {% if page.title == "Home" %}
