--- a/_sass/_gbstyle.scss
+++ b/_sass/_gbstyle.scss
@@ -129,8 +129,8 @@ img {
 //}
 
 .quotesource {
-//    border: none;
-//    padding: 0px;
+    border: none;
+    padding: 0px;
 //    margin: -20px 0 0 0;
     margin: -1.5rem 0 0 0;
 }
